@@ -188,6 +188,7 @@ struct proto {
         PROTO_CODE_SDP, PROTO_CODE_SIP, PROTO_CODE_TNS,
         PROTO_CODE_PGSQL, PROTO_CODE_MYSQL,
         PROTO_CODE_NETBIOS, PROTO_CODE_TLS, PROTO_CODE_ERSPAN,
+        PROTO_CODE_SKINNY,
         PROTO_CODE_DISCOVERY, PROTO_CODE_DUMMY, PROTO_CODE_MAX
     } code;                 ///< Numeric code used for instance to serialize these events
     uint64_t nb_frames;     ///< How many times we called this parse (count frames only if this parser is never called more than once on a frame)
