@@ -6,6 +6,8 @@ NEW in 2.5.0 (since 2.4.0)
 
 * TLS protocol (with optional decryption a la ssldump)
 
+* SKINNY protocol
+
 * Reorder all TCP traffic by default
 
 * NetTop plugin
